[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.black]
line-length = 130

[tool.mypy]
mypy_path = "src/"

[tool.poetry]
name = "lionskins"
version = "1.0.0"
description = ""
authors = ["Julien <contact@lionskins.co>"]

[tool.poetry.dependencies]
python                      = "^3.9"
beautifulsoup4              = "~4.10.0"
click                       = "~8.0.1"
flask                       = "~2.0.1"
flask-cors                  = "~3.0.10"
flask-jwt-extended          = "~4.3.0"
flask-mongoengine           = "~1.0.0"
Flask-Caching               = "~1.10.1"
Flask-OpenID                = "~1.3.0"
graphene                    = "~3.0b7"
graphql-core                = "~3.1.6"
graphql-server              = {version = "~3.0.0b4", extras = ["flask"]}
python-dotenv               = "~0.19.0"
python-slugify              = "~5.0.2"
ratelimit                   = "~2.2.1"
requests                    = "~2.26.0"
structlog                   = "~21.1.0"
tqdm                        = "~4.62.3"
user-agents                 = "~2.2.0"

# backoffice
apscheduler                 = "~3.9.1"

# bitskins
pyotp                       = "~2.6.0"

# deployment
gunicorn                    = "~20.1.0"

# sentry
sentry-sdk                  = {version = "~1.4.2", extras = ["flask"]}

[tool.poetry.dev-dependencies]
mypy                        = "*"
pre-commit                  = "*"
factory_boy                 = "~3.2.0"
mongomock                   = "~3.23.0"
pytest                      = "~6.2.5"
pytest-cov                  = "~2.12.1"
pytest-env                  = "~0.6.2"
pytest-factoryboy           = "~2.1.0"
pytest-flask                = "~1.2.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
