[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.black]
line-length = 130

[tool.mypy]
mypy_path = "src/"

[tool.pytest.ini_options]
env = [
    "MONGO_HOST=mongomock://localhost/test",
    "FLASK_SECRET_KEY=secret",
    "RECAPTCHA_SECRET=secret"
]

[tool.poetry]
name = "lionskins"
version = "1.0.0"
description = ""
authors = ["Julien <contact@lionskins.co>"]

[tool.poetry.dependencies]
python                      = "^3.10"
beautifulsoup4              = "~4.10.0"
click                       = "~8.0.1"
flask                       = "~2.0.1"
flask-cors                  = "~3.0.10"
flask-jwt-extended          = "~4.3.0"
flask-mongoengine           = "~1.0.0"
Flask-Caching               = "~1.10.1"
Flask-OpenID                = "~1.3.0"
graphene                    = "~3.0.0"
graphql-core                = "~3.1.7"
graphql-server              = {version = "~3.0.0b4", extras = ["flask"]}
python-dotenv               = "~0.19"
python-slugify              = "~6.1.1"
ratelimit                   = "~2.2.1"
requests                    = "~2.27"
structlog                   = "~21.5"
tqdm                        = "~4.63"
user-agents                 = "~2.2.0"

# backoffice
apscheduler                 = "~3.9.1"

# bitskins
pyotp                       = "~2.6.0"

# deployment
gunicorn                    = "~20.1.0"

# sentry
sentry-sdk                  = {version = "~1.5", extras = ["flask"]}

[tool.poetry.dev-dependencies]
mypy                        = "*"
pre-commit                  = "*"
factory_boy                 = "~3.2"
mongomock                   = "~4.0"
pytest                      = "~7.1"
pytest-cov                  = "~3.0"
pytest-env                  = "~0.6"
pytest-factoryboy           = "~2.1"
pytest-flask                = "~1.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
